Added click effect to buttons and removed outline

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-toggler {
+  transition-duration: 0.4s;
   font-size: 12px;
   right: 0;
   padding: 13px;
@@ -150,6 +151,16 @@ img::-moz-selection {
   border: 0;
   background-color: #5f5aff;
   font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+#mainNav .navbar-toggler:active {
+  background-color: #f1f0ff;
+  color: #222;
+}
+
+#mainNav .navbar-toggler:hover {
+  background-color: #f1f0ff;
+  color: #222;
 }
 
 #mainNav .navbar-brand {
@@ -543,8 +554,17 @@ footer ul.quicklinks {
   color: #222;
 }
 
+.btn:active {
+  background-color: #f1f0ff;
+  color: #222;
+}
+
 .btn {
   transition-duration: 0.4s;
   background-color: #5f5aff;
   color: white;
+}
+
+button::-moz-focus-inner {
+  border: 0;
 }
