--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+font-family: "SpaceGrotesk";
+src: url("../fonts/SpaceGrotesk.woff2") format("woff2");
+}
+
 body,
 html {
   height: 100%;
@@ -46,13 +51,13 @@ h3,
 h4,
 h5 {
   font-weight: 700;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'SpaceGrotesk', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #222;
 }
 
 h6 {
   font-weight: 600;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #222;
 }
 
@@ -87,7 +92,7 @@ section h3.section-subheading {
 }
 
 .btn {
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'SpaceGrotesk', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
 }
 
@@ -150,7 +155,7 @@ img::-moz-selection {
   color: white;
   border: 0;
   background-color: #5f5aff;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'SpaceGrotesk', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #mainNav .navbar-toggler:hover {
@@ -160,7 +165,7 @@ img::-moz-selection {
 
 #mainNav .navbar-brand {
   color: #5f5aff;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
@@ -173,7 +178,7 @@ img::-moz-selection {
   padding: 0.75em 0;
   letter-spacing: 1px;
   color: white;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
@@ -253,7 +258,7 @@ header.masthead .intro-text .intro-heading {
   font-weight: 700;
   line-height: 50px;
   letter-spacing: 1px;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'SpaceGrotesk', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 @media (min-width: 576px) {
@@ -283,7 +288,7 @@ header.masthead .intro-text .intro-heading {
     font-weight: 700;
     line-height: 75px;
     margin-bottom: 25px;
-    font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'SpaceGrotesk', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
 }
 
@@ -470,7 +475,7 @@ header.masthead .intro-text .intro-heading {
 .grid-modal .modal-content p.item-intro {
   font-size: 16px;
   margin: 20px 0 30px;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'SpaceGrotesk', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .grid-modal .modal-content ul.list-inline {
@@ -523,26 +528,6 @@ header.masthead .intro-text .intro-heading {
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
   background-color: #222;
-}
-
-footer {
-  padding: 25px 0 55px 0;
-  text-align: center;
-}
-
-footer span.copyright {
-  font-size: 90%;
-  line-height: 40px;
-  text-transform: none;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-footer ul.quicklinks {
-  font-size: 90%;
-  line-height: 40px;
-  margin-bottom: 0;
-  text-transform: none;
-  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .bg-white {
