--- a/css/style.css
+++ b/css/style.css
@@ -660,3 +660,9 @@ button::-moz-focus-inner {
 .bottomlink {
   padding-left: 1.1em;
 }
+
+@media (max-width: 574px) {
+  .warningLeft {
+    display: none;
+  }
+}
