Change quote color

--- a/css/style.css
+++ b/css/style.css
@@ -671,7 +671,7 @@ button::-moz-focus-inner {
 
 .card-header {
   border: none;
-  background-color: var(--color-dusty-lilac);
+  background-color: var(--color-calming-lavender);
 }
 
 .card {
