--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ h5 {
 h6 {
   font-weight: 500;
   font-style: italic;
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--ff-default);
   color: #222;
 }
 
