--- a/css/style.css
+++ b/css/style.css
@@ -592,10 +592,6 @@ button::-moz-focus-inner {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.bottomlink {
-  padding-left: 1.1em;
-}
-
 .card-header {
   border: none;
   background-color: var(--color-calming-lavender);
@@ -613,11 +609,17 @@ button::-moz-focus-inner {
   .link__postfix {
       display: inline-block;
   }
+  .bottomlink {
+    padding-left: 1.1em;
+  }
 }
 
 @media screen and (min-width: 0px) and (max-width: 400px) {
   .link__postfix {
       display: none;
+  }
+  .bottomlink {
+    padding-left: 0;
   }
 }
 
