--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,63 @@ header.masthead .intro-text .intro-heading {
   letter-spacing: 4px;
 }
 
+@media (min-width: 576px) {
+  header.masthead .intro-text {
+    padding-top: 120px;
+  }
+  header.masthead .intro-text .intro-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 768px) {
+  header.masthead .intro-text {
+    padding-top: 140px;
+  }
+  .container {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  header.masthead .intro-text .intro-lead-in {
+    line-height: 40px;
+  }
+  header.masthead .intro-text .intro-heading {
+    font-size: 75px;
+    font-weight: medium;
+    line-height: 75px;
+    margin-bottom: 25px;
+    font-family: var(--ff-heading);
+  }
+}
+
+@media (min-width: 992px) {
+    header.masthead .intro-text {
+      padding-top: 150px;
+    }
+  .container {
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+}
+
+@media (min-height: 840px) {
+    header.masthead .intro-text {
+      padding-top: 200px;
+    }
+}
+
+@media (min-height: 900px) {
+    header.masthead .intro-text {
+      padding-top: 250px;
+    }
+}
+
+@media (min-height: 1100px) {
+    header.masthead .intro-text {
+      padding-top: 350px;
+    }
+}
+
 .hero {
   display: table;
   position: relative;
@@ -448,6 +505,12 @@ header.masthead .intro-text .intro-heading {
 
 #more * {
   z-index: 2;
+}
+
+@media (min-width: 768px) {
+  #more .grid-item {
+    margin: 0 0 30px;
+  }
 }
 
 .grid-modal {
@@ -592,6 +655,12 @@ button::-moz-focus-inner {
     -moz-osx-font-smoothing: grayscale;
 }
 
+@media (max-width: 768px) {
+  .warningLeft {
+    display: none;
+  }
+}
+
 .card-header {
   border: none;
   background-color: var(--color-calming-lavender);
@@ -603,75 +672,4 @@ button::-moz-focus-inner {
 
 .mutedText {
   color: var(--color-vibrant-violet);
-}
-
-@media screen and (min-width: 401px) and (max-width: 1024px) {
-  .link__postfix {
-      display: inline-block;
-  }
-  .bottomlink {
-    padding-left: 1.1em;
-  }
-}
-
-@media screen and (min-width: 0px) and (max-width: 400px) {
-  .link__postfix {
-      display: none;
-  }
-  .bottomlink {
-    padding-left: 0;
-  }
-}
-
-@media (min-height: 1100px) {
-    header.masthead .intro-text {
-      padding-top: 350px;
-    }
-}
-
-@media (min-height: 900px) {
-    header.masthead .intro-text {
-      padding-top: 250px;
-    }
-}
-
-@media (min-height: 840px) {
-    header.masthead .intro-text {
-      padding-top: 200px;
-    }
-}
-
-@media (min-width: 768px) {
-  header.masthead .intro-text {
-    padding-top: 140px;
-  }
-  .container {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-  header.masthead .intro-text .intro-lead-in {
-    line-height: 40px;
-  }
-  header.masthead .intro-text .intro-heading {
-    font-size: 75px;
-    font-weight: medium;
-    line-height: 75px;
-    margin-bottom: 25px;
-    font-family: var(--ff-heading);
-  }
-  #more .grid-item {
-    margin: 0 0 30px;
-  }
-  .warningLeft {
-    display: none;
-  }
-}
-
-@media (min-width: 576px) {
-  header.masthead .intro-text {
-    padding-top: 120px;
-  }
-  header.masthead .intro-text .intro-heading {
-    font-size: 50px;
-  }
 }
