--- a/css/style.css
+++ b/css/style.css
@@ -673,3 +673,21 @@ button::-moz-focus-inner {
 .mutedText {
   color: var(--color-vibrant-violet);
 }
+
+@media screen and (min-width: 401px) and (max-width: 1024px) {
+  .link__postfix {
+      display: inline-block;
+  }
+  .bottomlink {
+    padding-left: 1.1em;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 400px) {
+  .link__postfix {
+      display: none;
+  }
+  .bottomlink {
+    padding-left: 0;
+  }
+}
