--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,6 @@ body {
   }
 }
 
-.preload * {
-  -webkit-transition: none !important;
-  -moz-transition: none !important;
-  -ms-transition: none !important;
-  -o-transition: none !important;
-}
-
 p {
   line-height: 1.75;
 }
@@ -288,6 +281,11 @@ header.masthead {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  animation-name: fadeIn;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
 .no-js header.masthead {
