--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ body {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   animation-name: fadeIn;
   animation-iteration-count: 1;
-  animation-timing-function: ease-in-out;
-  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  animation-duration: .5s;
   animation-fill-mode: forwards;
 }
 
@@ -283,8 +283,8 @@ header.masthead {
   background-size: cover;
   animation-name: fadeIn;
   animation-iteration-count: 1;
-  animation-timing-function: ease-in-out;
-  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  animation-duration: .5s;
   animation-fill-mode: forwards;
 }
 
